feat: generate html

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"]
+      "$lib": ["src"],
+      "$lib/*": ["src/*"]
     }
   }
 }
