--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "run-s build:*",
-    "build:01": "esbuild src/index.ts --bundle --outfile=build/index.js",
+    "build:01": "esbuild src/index.ts --bundle --platform=node --outfile=build/index.js",
     "build:02": "node ./build",
     "format": "prettier --ignore-path .gitignore --ignore-path .prettierignore --write --plugin-search-dir=. .",
     "prepare": "husky install",
