chore: fix github actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "files.exclude": {
     ".czrc": true,
     ".gitattributes": true,
-    ".github": true,
+    // ".github": true,
     ".gitignore": true,
     ".husky": true,
     ".lintstagedrc.json": true,
