--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     # https://crontab.guru/ (At 00:00).
-    - cron: '0 0 * * *'
+    - cron: '0 * * * *'
 
 jobs:
   release:
